<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ajay.wifianalyzer.MainActivity"
    tools:showIn="@layout/activity_main">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/colorSubhead">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wi_fi"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textOn="ON"
            android:textOff="OFF"/>
    </RelativeLayout>

<!--cardview-->


    <android.support.v7.widget.CardView
        style="@style/Theme.SleepCycleAlarm.InfoCard"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sleep_now_card_info_title"
                android:textColor="@color/colorTextPrimaryNegative"
                android:textSize="@dimen/textBody1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_now_card_info_summary"
                android:textColor="@color/colorTextSecondaryNegative"
                android:textSize="@dimen/textBody2" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

<!--card view end-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connected_n_w_strength"
        android:fontFamily="@font/roboto_bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/wifiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="-30"
        android:fontFamily="@font/roboto_bold"
        android:textSize="48sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dbm"
        android:fontFamily="@font/roboto_bold"
        android:textSize="24sp"
        android:gravity="center_horizontal"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/properties"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="36dp"
        android:layout_gravity="center_horizontal"
        style="@style/ButtonText"
        android:onClick="showWifiDetails"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/monitor_signal"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        style="@style/ButtonText"
        android:onClick="monitorWifi"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_data"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        style="@style/ButtonText"
        android:onClick="clearData"/>
</LinearLayout>

</android.support.constraint.ConstraintLayout>